<resources>
    <string name="app_name">SportClub</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="group">Group</string>
    <string name="save">save</string>
    <string name="invalid_first_name">Name shouldn\'t be empty</string>
    <string name="invalid_last_name">Last name shouldn\'t be empty</string>
</resources>