<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_one"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/first_name"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_person"
        tools:layout_editor_absoluteX="26dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_first_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:hint="@string/first_name"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/last_name"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/til_one"
        app:startIconDrawable="@drawable/ic_person"
        tools:layout_editor_absoluteX="26dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:hint="@string/last_name"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_two"
        android:layout_margin="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_three"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/group"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ll_one"
        app:startIconDrawable="@drawable/ic_group"
        tools:layout_editor_absoluteX="26dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:hint="@string/group"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        style="@style/iconButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_three"
        android:layout_margin="16dp"
        app:icon="@drawable/ic_delete"
        android:background="@android:color/transparent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save"
        android:layout_margin="16dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>